--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2665,7 +2665,7 @@ blockquote {
 .footer {
     border-top: 1px solid var(--border);
     margin-top: 120px;
-    padding-top: 80px;
+    padding-top: 76px;
     display: block;
     position: relative;
     overflow: hidden
@@ -5109,4 +5109,30 @@ blockquote {
     font-weight: 400 900;
     font-style: normal;
     font-display: swap;
+}
+
+.navbar-link-hover-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    /* Adjust for hover color */
+    z-index: 0;
+    /* Lower than content */
+    transition: background-color 0.3s ease;
+    /* Smooth transition */
+}
+
+.navbar-link-active-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    /* Adjust for active color */
+    z-index: 1;
+    /* Above hover background */
 }
